# HW14_scrapy_sqlitedb

./: main.py  models.py  pipeline.py  pyproject.toml  readme.md
